[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=3]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 23.103, 15.5081 )
speed = 120

[node name="StartTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="StartPositionPlayer1" type="Position2D" parent="."]
position = Vector2( 208, 48 )

[node name="HUD" parent="." instance=ExtResource( 3 )]
[connection signal="bomb_placed" from="Player" to="." method="_on_Player_bomb_placed"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game_map_1" from="HUD" to="." method="new_game" binds= [ 1 ]]
[connection signal="start_game_map_2" from="HUD" to="." method="new_game" binds= [ 2 ]]
